--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,10 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	 <key>NSCameraUsageDescription</key>
+        <string>Allow access to the camera to take photos</string>
+        <key>NSPhotoLibraryUsageDescription</key>
+        <string>Allow access to the photo library to select photos</string>
+
 </dict>
 </plist>
